--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "data source=ALEX; Initial Catalog=DB_ALQUILER; User id=sa; password=123"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
